gitops/core/prowler/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowler
  namespace: prowler
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
  hostnames:
    - "prowler.menghi.uy"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: prowler
          port: 80
